[package]
name = "nodemad"
version = "0.1.0"
authors = ["JamesPatrickGill <jpgilldev@gmail.com>"]
edition = "2018"
description = "A tool to let you move around node versions with ease."
license = "MIT"

[[bin]]
name = "nmad"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.0"
indicatif = "0.16.2"
home = "0.5.3"
tar = "0.4.35"
flate2 = "1.0"
console = "0.14.1"


